platform/radar/ratelimit-default.middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit-default
  namespace: radar
spec:
  rateLimit:
    average: 100
    burst: 50
