platform/radar/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radar
  namespace: radar
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
      sectionName: https
  hostnames:
    - radar.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: radar
          port: 80
          filters:
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: secure-headers
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: ratelimit-default
